730d757d219b45930b9a3293f38e55ca0b36fbb1 Fix: Button alignment issues in Bulma, Foundation and Fomantic
Sync to source repo @730d757d219b45930b9a3293f38e55ca0b36fbb1

--- a/css/buttons.semanticui.css
+++ b/css/buttons.semanticui.css
@@ -428,6 +428,7 @@ div.dt-buttons a.button.processing:after {
 }
 div.dt-buttons.ui.buttons {
   flex-wrap: wrap;
+  font-size: 1em;
 }
 div.dt-buttons .button span.dt-button-down-arrow {
   position: relative;
